# cikit

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  ci.config.toml  sample.config.toml
.github/workflows/: ci.yml  publish.yml
buildreport/: index.html
sample-report/: index.html
sample-report/static/js/: 2.4028413f.chunk.js
sample-report2/: asset-manifest.json  index.html
sample-report2/static/css/: main.e8ad0369.chunk.css
sample-report2/static/js/: main.79550f7d.chunk.js
sample-report3/: asset-manifest.json  data.failures.json  index.html
sample-report3/static/css/: main.273437a5.chunk.css
sample-report3/static/js/: 2.4e865d76.chunk.js  main.8be2a823.chunk.js
src/: ci.rs  config.rs  console.rs  github.rs  junit.rs  lib.rs  main.rs  notify.rs  slack.rs
src/gcs/: mod.rs  publisher.rs
src/github/: comments.rs  mod.rs  notifier.rs
src/github/testdata/: gh.pr-context.json
src/html/: mod.rs
src/junit/: cli.rs  display.rs  fs.rs  mod.rs  serdes.rs
ui/: package-lock.json  package.json
ui/public/: data.json  index.html
ui/src/: App.tsx  dtos.ts  index.css  index.tsx  utils.ts
ui/src/components/: AllSuites.tsx  FailedSuites.tsx  FailedTestCase.tsx  GithubContext.tsx  Summary.test.tsx  Summary.tsx
