[package]
name = "cinotify"
version = "0.1.0"
authors = ["Andrea Fiore <andrea.giulio.fiore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0.111", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
log = "0.4"
toml = "0.5"
structopt = "0.3"
hyper = "0.13"
glob = "0.3.0"
humantime = "2.0"

[dev-dependencies]
uuid =  { version = "0.8", features = ["serde", "v4"] }
pretty_assertions = "0.6"