[package]
name = "cikit"
version = "0.1.0"
authors = ["Andrea Fiore <andrea.giulio.fiore@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde-xml-rs = "0.4"
chrono = { version = "0.4", features = ["serde"] }
env_logger = "0.7"
log = "0.4"
toml = "0.5"
structopt = "0.3"
reqwest = { version = "0.10", features = ["blocking", "json"] }
glob = "0.3.0"
humantime = "2.0"
colored = "2.0.0"
atty = "0.2"
include_dir = "0.6.0"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
uuid =  { version = "0.8", features = ["serde", "v4"] }
pretty_assertions = "0.6"

[build-dependencies]
glob = "0.3.0"
fs_extra = "1.1"
