[package]
authors = ["Andrea Fiore <andrea.giulio.fiore@gmail.com>"]
edition = "2018"
name = "cikit"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
atty = "0.2"
chrono = {version = "0.4", features = ["serde"]}
cloud-storage = {version = "0.6", features = ["sync"]}
colored = "2.0.0"
env_logger = "0.7"
glob = "0.3.0"
humantime = "2.0"
include_dir = "0.6.0"
log = "0.4"
openssl = {version = "0.10", features = ["vendored"]}
reqwest = {version = "0.10", features = ["blocking", "json"]}
serde = {version = "1.0.114", features = ["derive"]}
serde-xml-rs = "0.4"
serde_derive = "1.0"
serde_json = "1.0"
structopt = "0.3"
thiserror = "1.0"
toml = "0.5"
tree_magic = "0.2"

[dev-dependencies]
pretty_assertions = "0.6"
uuid = {version = "0.8", features = ["serde", "v4"]}

[build-dependencies]
fs_extra = "1.1"
glob = "0.3.0"
